Bug 106270 - Insert -> Image with pdf has wrong colors with opengl enabled
Summary: Insert -> Image with pdf has wrong colors with opengl enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-02 07:39 UTC by Miklos Vajna
Modified: 2017-03-03 16:29 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (520 bytes, application/pdf)
2017-03-02 07:39 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-03-02 07:39:55 UTC
Created attachment 131569 [details]
Reproducer document.

Hi,

Steps to reproduce:

1) Open Writer.
2) Insert -> Image, and select the attached blue star pdf.

Expected result: the star is blue.

Actual result: the star is red when OpenGL is enabled.
Comment 1 Commit Notification 2017-03-02 09:52:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1d6f202e2b8ff555cedde6315685342325b16fc

tdf#106270 vcl PDF import: use BitmapWriteAccess::CopyScanline()

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.