tdf#106270 vcl PDF import: use BitmapWriteAccess::CopyScanline()

This requires one function call / row only, cross-platform and works
with OpenGL enabled as well.

Change-Id: I12fd0f52a1a7e8e683b50071ded95f63fecc4d40
Reviewed-on: https://gerrit.libreoffice.org/34774
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>